--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,24 @@
 .App {
+  position: absolute;
+  top:0px;
+  left: 0px;
+  height: 100vh;
+  width: 100vw;
+
   text-align: center;
+  background-color:  rgba(246,255,244,0.9);
+}
+.header{
+  font-size: 60px;
+  width: 100vw;
+  color: #0a4037 ;
+}
+#root{
+  background-color: red ;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -14,6 +27,7 @@
 }
 
 .App-header {
+
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
